--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ scripts/*
 !scripts/inactive.py
 !scripts/seedsize.py
 !scripts/fastresume.py
+!scripts/eta_check.py
 
 
 # Byte-compiled / optimized / DLL files
